--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,14 @@
       <artifactId>postgresql</artifactId>
       <version>42.6.0</version>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
+    <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjweaver</artifactId>
+      <version>1.9.6</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>spring_course_mvc_hibernate_aop</finalName>
